[package]
name = "aurion_rs"
version = "0.2.1"
edition = "2021"
authors = ["Youn Mélois <youn@melois.dev>"]
description = "Aurion API in Rust"
repository = "https://github.com/sehnryr/aurion_rs"
homepage = "https://github.com/sehnryr/aurion_rs"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
dyer = { version = "3.3.2", features = ["xpath"] }
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["cookies", "json"] }
serde = "1.0.152"
serde_json = "1.0.91"
